[gd_scene load_steps=8 format=3 uid="uid://ct8tdujobt7uy"]

[ext_resource type="Script" uid="uid://cvof66w30vq7f" path="res://scripts/room_scripts/room.gd" id="1_4oogr"]
[ext_resource type="PackedScene" uid="uid://duqacud67lkoy" path="res://scenes/post_it_note.tscn" id="2_h62ai"]
[ext_resource type="Texture2D" uid="uid://biidlk2pubaf8" path="res://resources/puzzleTextures/rightArrow.png" id="2_s3bnt"]
[ext_resource type="Texture2D" uid="uid://b0b0pql0n6q7x" path="res://resources/puzzleTextures/upArrow.png" id="3_xluy4"]
[ext_resource type="AudioStream" uid="uid://c0g34cw37myht" path="res://sfx/Click2-Sebastian-759472264.mp3" id="5_xluy4"]

[sub_resource type="Gradient" id="Gradient_31uvf"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_03jwg"]
gradient = SubResource("Gradient_31uvf")

[node name="RoomGeneric" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4oogr")

[node name="FrontTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1942.0
offset_bottom = 1093.0
texture = SubResource("GradientTexture2D_03jwg")
expand_mode = 1

[node name="OppositeTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1932.0
offset_bottom = 1093.0
texture = SubResource("GradientTexture2D_03jwg")
expand_mode = 1

[node name="LeftButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 448.0
offset_right = 205.0
offset_bottom = 566.0
texture_normal = ExtResource("2_s3bnt")
flip_h = true

[node name="RightButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1731.0
offset_top = 449.0
offset_right = 1844.0
offset_bottom = 555.0
texture_normal = ExtResource("2_s3bnt")

[node name="OppositeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 929.0
offset_top = 914.0
offset_right = 1062.0
offset_bottom = 1017.0
texture_normal = ExtResource("3_xluy4")
flip_v = true

[node name="FrontButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 930.0
offset_top = 914.0
offset_right = 1043.0
offset_bottom = 1035.0
texture_normal = ExtResource("3_xluy4")

[node name="FrontPostItNote" parent="." instance=ExtResource("2_h62ai")]
top_level = true
layout_mode = 1
offset_left = 340.0
offset_top = 106.0
offset_right = -771.0
offset_bottom = -226.0

[node name="BackPostItNote" parent="." instance=ExtResource("2_h62ai")]
visible = false
layout_mode = 1
offset_left = 1020.0
offset_top = 254.0
offset_right = -91.0
offset_bottom = -78.0

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xluy4")

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="OppositeButton" to="." method="_on_opposite_button_pressed"]
[connection signal="pressed" from="FrontButton" to="." method="_on_front_button_pressed"]
